# fastapi-projects

fastapi-auth/: main.py  pyproject.toml
fastapi-auth/app/: main.py
fastapi-auth/app/middleware/: auth.py
fastapi-auth/app/models/: user.py
fastapi-auth/app/routes/: auth.py
fastapi-auth/app/schemas/: user.py
streamflix-api/: main.py  pyproject.toml
streamflix-api/app/routers/: upload.py
streamflix-api/app/workers/: transcoder.py
