[project]
name = "streamflix-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "arq>=0.28.0",
    "fastapi>=0.136.1",
    "pycryptodome>=3.23.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "uvicorn>=0.47.0",
]
